--- a/style.css
+++ b/style.css
@@ -84,3 +84,56 @@ iframe{
         height: 400px;
         width: 100%;
        }
+
+.mySlides {display:none;}
+
+#image1{
+width: 1423px;
+height: 822px;
+float: center;
+}
+#image2{
+width: 1423px;
+height: 822px;
+float: center;
+}
+#image3{
+width: 1423px;
+height: 822px;
+float: center;
+}
+#image4{
+width: 1423px;
+height: 822px;
+float: center;
+}
+
+h2 { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+}
+
+#h61{
+text-align: center;
+top: 300px; 
+}
+
+#h62{
+text-align: center;
+top: 300px; 
+}
+
+#h64{
+text-align: center;
+top: 300px; 
+}
+
+.video {display: none:}
+
+#video1{
+width: 1423px;
+height: 822px;
+float: center;
+}
