--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@ html {
 /*------------------------------------------------------------------------------------*/
 /*CSS for Links*/
 .nav {
-	padding-bottom: 10px;
-	width:315px;
-	position:relative;
-	left:35%;
+  padding-bottom: 10px;
+  width:269px;
+  position:relative;
+  left:35%;
 }
 
  .nav ul {
@@ -26,7 +26,7 @@ html {
 
 .nav li a {
     display: inline-block;
-    font-size: 1em;
+    font-size: 0.2em;
     color: black;
     text-align: center; 
     padding: 15px 15px;
@@ -69,19 +69,75 @@ ul{
 
 /*------------------------------------------------------------------------------------*/
 /*CSS for Images and videos*/
-img {
-    border-radius: 10px;
-	margin-left: 40px;
+.mySlides {display:none;}
 
-}
-iframe{
+#image1{
+	width: 1423px;
+	height: 822px;
 	float: left;
-	margin-left: 40px;
+	}
+#image2{
+	width: 1423px;
+	height: 822px;
+	float: left;
+}
+#image3{
+	width: 1423px;
+	height: 822px;
+	float: left;
+}
+#image4{
+	width: 1423px;
+	height: 822px;
+	float: left;
+}
+#image5{
+	width: 1423px;
+	height: 822px;
+	float: left;
+}
+
+.video {display: none;}
+
+#video1{
+	width: 1423px;
+	height: 822px;
+	float: left;
 }
 /*------------------------------------------------------------------------------------*/
+
+h2 { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+}
+
+#h61{
+	text-align: center;
+	top: 300px; 
+}
+
+#h62{
+	text-align: center;
+	top: 300px; 
+}
+
+#h63{
+	text-align: center;
+	top: 300px; 
+}
+		
+#h64{
+	text-align: center;
+	top: 300px; 
+}
+#h65{
+	text-align: center;
+	top: 300px; 
+}
 
 #map {
         height: 400px;
         width: 100%;
        }
-
