--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+/*CSS Reset*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/*------------------------------------------------------------------------------------*/
+
 /*HTML*/
 html {
 			min-width: 1000px;
@@ -46,26 +69,56 @@ body {
 }
 
 h1{
-    font-family: "Times New Roman", Times, serif;
-    border-top-style: none;
-	color: #000000;
+    font-size: 200%;
+	border-style: solid;
+	font-family: "Times New Roman", Times, serif;
+	color: #000033;
+	text-align: left;
 }
 
 h3{
     font-family: "Times New Roman", Times, serif;
-    border-top-style: none;
+    font-size: 150%;
+	border-style: solid;
+	font-family: "Times New Roman", Times, serif;
 	color: #990000;
+	text-align: left;
 }
 
 p{
     font-family: "Times New Roman", Times, serif;
 	color: #000000;
-
 }
 
-ul{
-	color: #000000;
+p.big {
+    line-height: 200%;
 }
+
+ul.a {
+    list-style-type: circle;
+    color: #000000;
+    padding-top: 10px;
+    padding-right: 0px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    line-height: 150%;
+}
+
+ul.c {
+    list-style-type: square;
+    color: #000000;
+    padding: 20px;
+    line-height: 150%;
+}
+
+ol.b {
+    list-style-type: upper-roman;
+    color: #000000;
+    padding: 20px;
+    line-height: 150%;
+    margin-left: 10px;
+}
+
 
 /*------------------------------------------------------------------------------------*/
 /*CSS for Images and videos*/
