--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html {
     
 }
 /*------------------------------------------------------------------------------------*/
-/*CSS for all three webpages*/
+/*CSS for three webpages*/
 
 body {
 	margin-left: 10px;
