--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1{
 	border-style: solid;
 	font-family: "Times New Roman", Times, serif;
 	color: #000033;
-	text-align: left;
+	text-align: center;
 }
 
 h3{
