--- a/style.css
+++ b/style.css
@@ -28,10 +28,12 @@ html {
 /*------------------------------------------------------------------------------------*/
 /*CSS for Links*/
 .nav {
-  padding-bottom: 10px;
-  width: 315px;
-  position:relative;
-  left:35%;
+  text-align:center;
+  background-color: #000000;
+  overflow: hidden;
+  list-style: none;
+  width: 100%;
+  margin: 0;
 }
 
  .nav ul {
