--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ html {
 /*CSS for Links*/
 .nav {
   text-align:center;
-  background-color: #000000;
+  background-color: #bfbfbf;
   overflow: hidden;
   list-style: none;
   width: 100%;
@@ -42,7 +42,7 @@ html {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #ffffff;
+    background-color: #000000;
 }
 
 .nav li {
