--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ html {
 	margin: 0;
 	padding: 0;
 	width: 100%;
+	border: 2px solid red;
+    border-radius: 5px;
 }
 
 .nav li {
@@ -55,7 +57,8 @@ html {
 
 .nav li a:hover {
     background-color: #380;
-    
+    border: 2px solid white;
+    border-radius: 5px;
 }
 /*------------------------------------------------------------------------------------*/
 /*CSS for three webpages*/
