--- a/style.css
+++ b/style.css
@@ -130,6 +130,37 @@ ol.b {
 }
 
 /*------------------------------------------------------------------------------------*/
+/*Media Query*/
+.media{
+    color:#fff;
+		float:left;
+		margin:0%;
+		width: 100%;
+		background-color: #e95b33;
+}
+@media screen and (max-width: 600px) { 
+		.media{
+			float: none;
+			margin:0;
+			width: 100%;
+		}
+}
+	
+.med{
+    color:#fff;
+		float:left;
+		margin:0%;
+		width: 100%;
+		background-color: #40b7d7;
+}
+@media screen and (max-width: 600px) { 
+		.med{
+			float: none;
+			margin:0;
+			width: 100%;
+		}
+}
+/*------------------------------------------------------------------------------------*/
 /*CSS for Resume*/
 
 div.resume h3 {
