--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
 	background-color: #000000;
 	margin: 0;
 	padding: 0;
+	width: 50%;
 	border: 2px solid red;
         border-radius: 5px;
 }
