--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
-	padding: 0;
+	padding: 0px 50px 0px 50px;
 	border: 0;
 	font-size: 100%;
 	font: inherit;
