--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ ol.b {
 		float:left;
 		margin:0%;
 		width: 100%;
-		background-color: #e95b33;
+		background-color: #ffb7a3;
 }
 @media screen and (max-width: 600px) { 
 		.media{
@@ -151,7 +151,7 @@ ol.b {
 		float:left;
 		margin:0%;
 		width: 20%;
-		background-color: #40b7d7;
+		background-color: #c9e9f2;
 }
 @media screen and (max-width: 600px) { 
 		.med{
