--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@ html {
 	text-align:center;
 	background-color: #000000;
 	margin: 0;
-	padding: 0px 50px 0px 50px;
-	width: 50%;
+	padding: 0;
+	width: 100%;
 	border: 2px solid red;
         border-radius: 5px;
 }
@@ -150,7 +150,7 @@ ol.b {
     color:#fff;
 		float:left;
 		margin:0%;
-		width: 20%;
+		width: 100%;
 		background-color: #c9e9f2;
 }
 @media screen and (max-width: 600px) { 
