--- a/style.css
+++ b/style.css
@@ -150,8 +150,9 @@ ol.b {
     color:#fff;
 		float:left;
 		margin:0%;
-		width: 100%;
+		width: 20%;
 		background-color: #c9e9f2;
+		padding-right: 100%;
 }
 @media screen and (max-width: 600px) { 
 		.med{
